Remove java9 params from test